--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <string name="maximum_time">Maximales Zeitintervall</string>
     <string name="minimum_time">Kleinstes Zeitintervall möglich</string>
     <string name="start_button">Starten</string>
@@ -6,4 +7,7 @@
     <string name="info_alarm_set">Erstellen Countdown-Timer für %ds</string>
     <string name="notification_title">%s Timer läuft</string>
     <string name="bell_ringing">Alarm ist am klingeln</string>
+    <string name="minutes">Minuten</string>
+    <string name="seconds">Sekunden</string>
+
 </resources>
