--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <string name="maximum_time">Intervalo de tiempo máximo</string>
     <string name="minimum_time">Intervalo de tiempo más pequeño posible</string>
     <string name="start_button">Comenzar</string>
@@ -6,4 +7,7 @@
     <string name="info_alarm_set">Crear cuenta atrás de %ds</string>
     <string name="notification_title">%s en marcha!</string>
     <string name="bell_ringing">La alarma está sonando</string>
+    <string name="minutes">minutos</string>
+    <string name="seconds">segundos</string>
+
 </resources>
