--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <string name="maximum_time">Maximum time interval</string>
     <string name="minimum_time">Smallest time interval possible</string>
     <string name="start_button">Start</string>
@@ -6,7 +7,7 @@
     <string name="info_alarm_set">Create countdown timer for %ds</string>
     <string name="notification_title">%s timer running</string>
     <string name="bell_ringing">Bell is ringing</string>
-    <string name="abbrev_minute">minutes</string>
-    <string name="abbrev_second">seconds</string>
+    <string name="minutes">minutes</string>
+    <string name="seconds">seconds</string>
 
 </resources>
