--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,5 +9,6 @@
     <string name="bell_ringing">Alarm ist am klingeln</string>
     <string name="minutes">Minuten</string>
     <string name="seconds">Sekunden</string>
+    <string name="channel_name">Alarm</string>
 
 </resources>
