--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="bell_ringing">Bell is ringing</string>
     <string name="minutes">minutes</string>
     <string name="seconds">seconds</string>
+    <string name="channel_name">Alarm</string>
 
 </resources>
