--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,9 @@
     <string name="minutes">minutes</string>
     <string name="seconds">seconds</string>
     <string name="channel_name">Alarm</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+    <string name="pref_title_vibrate">Vibrate</string>
 
 </resources>
