--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -10,5 +10,9 @@
     <string name="minutes">Minuten</string>
     <string name="seconds">Sekunden</string>
     <string name="channel_name">Alarm</string>
+    <string name="title_activity_settings">Einstellungen</string>
+    <string name="pref_title_ringtone">Alarmton</string>
+    <string name="pref_ringtone_silent">Leise</string>
+    <string name="pref_title_vibrate">Vibration</string>
 
 </resources>
