--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,12 +1,11 @@
 <resources>
 
-    <string name="maximum_time">Maximales Zeitintervall</string>
-    <string name="minimum_time">Kleinstes Zeitintervall möglich</string>
-    <string name="start_button">Starten</string>
-    <string name="error_min_is_bigger_than_max">Nee! Der Maximalwert muss größer sein als der Kleinste</string>
-    <string name="info_alarm_set">Erstellen Countdown-Timer für %ds</string>
+    <string name="maximum_time">Zeit-Maximum vor Alarmauslösung</string>
+    <string name="minimum_time">Zeit-Minimum vor Alarmauslösung</string>
+    <string name="start_button">Start</string>
+    <string name="error_min_is_bigger_than_max">Nein, der Zeit-Maximum Wert muss höher sein als das Zeit-Minimum</string>
     <string name="notification_title">%s Timer läuft</string>
-    <string name="bell_ringing">Alarm ist am klingeln</string>
+    <string name="bell_ringing">Alarm erklingt</string>
     <string name="minutes">Minuten</string>
     <string name="seconds">Sekunden</string>
     <string name="channel_name">Alarm</string>
