--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
-    <string name="maximum_time">Zeit-Maximum vor Alarmauslösung</string>
-    <string name="minimum_time">Zeit-Minimum vor Alarmauslösung</string>
+	<string name="from">Von</string>
+	<string name="to">Bis</string>
     <string name="start_button">Start</string>
     <string name="error_min_is_bigger_than_max">Nein, der Zeit-Maximum Wert muss höher sein als das Zeit-Minimum</string>
     <string name="notification_title">%s Timer läuft</string>
@@ -12,5 +12,6 @@
     <string name="title_activity_settings">Einstellungen</string>
     <string name="pref_title_ringtone">Alarmton</string>
     <string name="pref_ringtone_silent">Leise</string>
+	<string name="random_timer_introduction">Intervallbereich definieren</string>
 
 </resources>
