--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,6 @@
 <resources>
 
-    <string name="maximum_time">Intervalo de tiempo máximo</string>
-    <string name="minimum_time">Intervalo de tiempo más pequeño posible</string>
+	<string name="to">Hasta</string>
     <string name="start_button">Comenzar</string>
     <string name="error_min_is_bigger_than_max">¡No! El valor máximo debe ser mas grande que el mínimo</string>
     <string name="notification_title">%s en marcha!</string>
@@ -12,5 +11,7 @@
     <string name="title_activity_settings">Ajustes</string>
     <string name="pref_title_ringtone">Tono de llamada</string>
     <string name="pref_ringtone_silent">Silencioso</string>
+	<string name="from">Desde</string>
+	<string name="random_timer_introduction">Define intervaloo</string>
 
 </resources>
