--- a/app/src/main/res/values-gsw/strings.xml
+++ b/app/src/main/res/values-gsw/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
-    <string name="maximum_time">Zyt-Maximum</string>
-    <string name="minimum_time">Zyt-Minimum</string>
+	<string name="from">Vo</string>
+	<string name="to">Bis</string>
     <string name="start_button">Joo looos</string>
     <string name="error_min_is_bigger_than_max">Nai, s\'zyt-maximum mues denk höcher si als s\'zyt-minimum</string>
     <string name="notification_title">%s Timer läuft</string>
@@ -12,5 +12,6 @@
     <string name="title_activity_settings">Istellige</string>
     <string name="pref_title_ringtone">Alarmton</string>
     <string name="pref_ringtone_silent">Lieslig</string>
+	<string name="random_timer_introduction">Intervallberich definiere</string>
 
 </resources>
