--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
 
-    <string name="maximum_time">Maximum time interval</string>
-    <string name="minimum_time">Smallest time interval possible</string>
+	<string name="random_timer_introduction">Define interval range</string>
+	<string name="from">From</string>
+	<string name="to">To</string>
     <string name="start_button">Start</string>
     <string name="error_min_is_bigger_than_max">Nope! The maximum value has to be greater than the minimum</string>
     <string name="notification_title">%s timer running</string>
