Added a fuller introduction

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -12,6 +12,6 @@
     <string name="title_activity_settings">Einstellungen</string>
     <string name="pref_title_ringtone">Alarmton</string>
     <string name="pref_ringtone_silent">Leise</string>
-	<string name="random_timer_introduction">Intervallbereich definieren</string>
+	<string name="random_timer_introduction">Definier den Zeitraum, in dem ein Alarm zufällig läuten wird.</string>
 
 </resources>
