--- a/app/src/main/res/values-gsw/strings.xml
+++ b/app/src/main/res/values-gsw/strings.xml
@@ -12,6 +12,6 @@
     <string name="title_activity_settings">Istellige</string>
     <string name="pref_title_ringtone">Alarmton</string>
     <string name="pref_ringtone_silent">Lieslig</string>
-	<string name="random_timer_introduction">Intervallberich definiere</string>
+	<string name="random_timer_introduction">Definier en Zeitraum, idem en Alarm zuefällig lute wird.</string>
 
 </resources>
