--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-	<string name="random_timer_introduction">Define interval range</string>
+	<string name="random_timer_introduction">Define a time range in which an alarm will ring randomly.</string>
 	<string name="from">From</string>
 	<string name="to">To</string>
     <string name="start_button">Start</string>
