--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -14,5 +14,7 @@
     <string name="pref_ringtone_silent">Silencioso</string>
 	<string name="random_timer_introduction">Define o período no que queres que soe a túa alarma aleatoriamente.</string>
 	<string name="show_elapsed_time">Mostrar o tiempo transcurrido</string>
+	<string name="show_notification">Mostrar notificacións</string>
+	<string name="show_notification_summary">Mostrar unha notificación do tempo restante e xa transcurrido.</string>
 
 </resources>
