Added vibration to settings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -16,5 +16,6 @@
 	<string name="show_elapsed_time">Mostrar el tiempo transcurrido</string>
 	<string name="show_notification_summary">Mostrar una notificación del tiempo restante y ya transcurrido.</string>
 	<string name="show_notification">Mostrar notificaciones</string>
+	<string name="pref_vibration_title">Vibración</string>
 
 </resources>
