--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -16,5 +16,6 @@
 	<string name="show_elapsed_time">Mostrar o tiempo transcurrido</string>
 	<string name="show_notification">Mostrar notificacións</string>
 	<string name="show_notification_summary">Mostrar unha notificación do tempo restante e xa transcurrido.</string>
+	<string name="pref_vibration_title">Vibración</string>
 
 </resources>
