--- a/sequential-timer/src/main/res/values/strings.xml
+++ b/sequential-timer/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
 	<string name="condition_summary_exact_interval">Stop after the interval
 		<b>%1$s:%2$s</b></string>
 	<string name="condition_summary_number_of_times">After <b>%1$s</b> times</string>
+	<string name="btn_save">Save</string>
+	<string name="btn_cancel">Cancel</string>
 </resources>
