--- a/random-ticker-base/src/main/res/values/strings.xml
+++ b/random-ticker-base/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
 	<string name="bell_ringing">Bell is ringing</string>
 	<string name="minutes">minutes</string>
 	<string name="seconds">seconds</string>
+	<string name="button_select_profile">Select\nprofile</string>
+	<string name="button_delete">Delete</string>
+	<string name="add_bookmark">Add item</string>
 </resources>
