--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,8 @@
 	<string name="add_bookmark">Add bookmark</string>
 	<string name="bookmark_hint">Add item</string>
 	<string name="notification_title">%s timer running</string>
-	<string name="channel_name">Alarm</string>
+	<string name="foreground_channel_name">Alarm</string>
+	<string name="running_channel_name">Timer</string>
 	<string name="title_activity_settings">Settings</string>
 	<string name="pref_title_ringtone">Ringtone</string>
 	<string name="pref_ringtone_silent">Silent</string>
