--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -21,5 +21,8 @@
 	<string name="pref_vibration_title">Vibration</string>
 	<string name="foreground_channel_name">Alarm</string>
 	<string name="running_channel_name">Timer</string>
+    <string name="bookmark_hint">Hinzufügen</string>
+    <string name="open_notification_channel_title">Öffne die Systemeinstellungen für Benachrichtungen</string>
+    <string name="open_notification_channel_description">Falls du Problem mit den Alarm hast, kann es an den Einstellungen der Benachrichtungen der App liegen.</string>
 
 </resources>
