--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
 	<string name="show_notification_summary">Show a notification of the time remaining and already elapsed.</string>
 	<string name="show_notification">Enable timer notification</string>
 	<string name="pref_vibration_title">Vibration</string>
+	<string name="open_notification_channel_title">Open app notification settings</string>
+	<string name="open_notification_channel_description">If you are experiencing alarm notifcation issues, there could be an issue with the app notification settings for the app.</string>
 </resources>
