--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
 	<string name="pref_vibration_title">Vibration</string>
 	<string name="open_notification_channel_title">Open app notification settings</string>
 	<string name="open_notification_channel_description">If you are experiencing alarm notifcation issues, there could be an issue with the app notification settings for the app.</string>
+	<string name="action_repeat">Repeat</string>
+	<string name="action_stop">Stop</string>
 </resources>
