--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,9 @@
 	<string name="start_button">Start</string>
 	<string name="error_min_is_bigger_than_max">Nope! The maximum value has to be greater than the minimum</string>
 	<string name="bell_ringing">Bell is ringing</string>
-	<string name="minutes">minutes</string>
-	<string name="seconds">seconds</string>
+	<string name="hours">h</string>
+	<string name="minutes">m</string>
+	<string name="seconds">s</string>
 	<string name="button_select_profile">Select\nprofile</string>
 	<string name="button_delete">Delete</string>
 	<string name="add_bookmark">Add bookmark</string>
