--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,30 +1,30 @@
 <resources>
-	<string name="random_timer_introduction">Define a time range in which an alarm will ring randomly.</string>
-	<string name="from">From</string>
-	<string name="to">To</string>
-	<string name="start_button">Start</string>
-	<string name="error_min_is_bigger_than_max">Nope! The maximum value has to be greater than the minimum</string>
-	<string name="bell_ringing">Bell is ringing</string>
-	<string name="hours">h</string>
-	<string name="minutes">m</string>
-	<string name="seconds">s</string>
-	<string name="button_select_profile">Select\nprofile</string>
-	<string name="button_delete">Delete</string>
-	<string name="add_bookmark">Add bookmark</string>
-	<string name="bookmark_hint">Add item</string>
-	<string name="notification_title">%s timer running</string>
-	<string name="foreground_channel_name">Alarm</string>
-	<string name="running_channel_name">Timer</string>
-	<string name="title_activity_settings">Settings</string>
-	<string name="pref_title_ringtone">Ringtone</string>
-	<string name="pref_ringtone_silent">Silent</string>
-	<string name="show_elapsed_time">Show elapsed time</string>
-	<string name="show_notification_summary">Show a notification of the time remaining and already elapsed.</string>
-	<string name="show_notification">Enable timer notification</string>
-	<string name="pref_vibration_title">Vibration</string>
-	<string name="open_notification_channel_title">Open app notification settings</string>
-	<string name="open_notification_channel_description">If you are experiencing alarm notifcation issues, there could be an issue with the app notification settings for the app.</string>
-	<string name="action_repeat">Repeat</string>
-	<string name="action_stop">Stop</string>
-    <string name="auto_repeat">Auto Repeat</string>
+    <string name="random_timer_introduction">Define a time range in which an alarm will ring randomly.</string>
+    <string name="from">From</string>
+    <string name="to">To</string>
+    <string name="start_button">Start</string>
+    <string name="error_min_is_bigger_than_max">Nope! The maximum value has to be greater than the minimum</string>
+    <string name="bell_ringing">Bell is ringing</string>
+    <string name="hours_label">hours</string>
+    <string name="minutes_label">minutes</string>
+    <string name="seconds_label">seconds</string>
+    <string name="button_select_profile">Select bookmark</string>
+    <string name="button_delete">Delete</string>
+    <string name="add_bookmark">Add bookmark</string>
+    <string name="bookmark_hint">Add item</string>
+    <string name="notification_title">%s timer running</string>
+    <string name="foreground_channel_name">Alarm</string>
+    <string name="running_channel_name">Timer</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+    <string name="show_elapsed_time">Show elapsed time</string>
+    <string name="show_notification_summary">Show a notification of the time remaining and already elapsed.</string>
+    <string name="show_notification">Enable timer notification</string>
+    <string name="pref_vibration_title">Vibration</string>
+    <string name="open_notification_channel_title">Open app notification settings</string>
+    <string name="open_notification_channel_description">Change the notification ringtone and vibration</string>
+    <string name="action_repeat">Repeat</string>
+    <string name="action_stop">Stop</string>
+    <string name="auto_repeat">Auto repeat after 2 seconds</string>
 </resources>
