--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="app_name">Random Ticker</string>
 	<string name="random_timer_introduction">"Elige "</string>
 	<string name="pref_vibration_title">Vibración</string>
 	<string name="show_notification">"Muestra notificación del temporizador "</string>
@@ -24,9 +23,10 @@
 	<string name="from">Desde</string>
 	<string name="action_stop">Parar</string>
 	<string name="action_repeat">Repetir</string>
-	<string name="auto_repeat">Repetir autmáticamente despues de 2 segundos</string>
+	<string name="auto_repeat">Repetir autmáticamente después de 2 segundos</string>
 	<string name="show_notification_summary">Muestra una notificación del tiempo restante y ya transcurrido.</string>
 	<string name="open_notification_channel_title">Abrir la configuración de notificaciones</string>
 	<string name="open_notification_channel_description">Cambiar el tono de llamada y la vibración de las notificaciones</string>
 	<string name="button_select_profile">Elige marcador</string>
+	<string name="please_allow_alarm_scheduling">Ha deshabilitado la programación de alarmas para Random Ticker, ve a la configuración y conceda el permiso.</string>
 </resources>
