--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -29,5 +29,6 @@
 	<string name="action_stop">Stopp</string>
 	<string name="auto_repeat">Wiederholen nach 2 Sekunden</string>
 	<string name="please_allow_alarm_scheduling">Du hast Alarmplanung für den Random-Ticker deaktiviert. Bitte gehe zu den Einstellungen und gib die Erlaubnis frei.</string>
+	<string name="notification_timer_runned_out">Zeit abgelaufen</string>
 
 </resources>
