--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 	<string name="from">From</string>
 	<string name="to">To</string>
 	<string name="start_button">Start</string>
+	<string name="stop_button" translatable="false">@string/action_stop</string>
 	<string name="error_min_is_bigger_than_max">Nope! The maximum value has to be greater than the minimum</string>
 	<string name="bell_ringing">Bell is ringing</string>
 	<string name="hours_label">hours</string>
@@ -28,4 +29,5 @@
 	<string name="action_stop">Stop</string>
 	<string name="auto_repeat">Auto repeat after 2 seconds</string>
 	<string name="please_allow_alarm_scheduling">You have disabled alarm scheduling for Random Ticker, please go to settings and grant the permission.</string>
+	<string name="notification_timer_runned_out">Timer run out</string>
 </resources>
