--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -30,4 +30,5 @@
 	<string name="button_select_profile">Elige marcador</string>
 	<string name="please_allow_alarm_scheduling">Ha deshabilitado la programación de alarmas para Random Ticker, ve a la configuración y conceda el permiso.</string>
 	<string name="notification_ticker_ended">Ya esta</string>
+	<string name="save_button">Guardar</string>
 </resources>
