--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
 	<string name="auto_repeat">Auto repeat after 2 seconds</string>
 	<string name="please_allow_alarm_scheduling">You have disabled alarm scheduling for Random Ticker, please go to settings and grant the permission.</string>
 	<string name="notification_ticker_ended">Time\'s up!</string>
+	<string name="save_button">Save</string>
 </resources>
