--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -3,33 +3,23 @@
 	<string name="from">Von</string>
 	<string name="to">Bis</string>
 	<string name="start_button">Start</string>
-	<string name="error_min_is_bigger_than_max">Nein, der Zeit-Maximum Wert muss höher sein als das Zeit-Minimum</string>
-	<string name="bell_ringing">Alarm erklingt</string>
 	<string name="hours_label">Stunden</string>
 	<string name="minutes_label">Minuten</string>
 	<string name="seconds_label">Sekunden</string>
 	<string name="random_ticker_introduction">Definier den Zeitraum, in dem ein Alarm zufällig läuten wird.</string>
-	<string name="button_select_profile">Lesezeichen wählen</string>
 	<string name="button_delete">Löschen</string>
 	<string name="add_bookmark">Lesezeichen hinzufügen</string>
-	<string name="notification_title">%s Timer läuft</string>
 	<string name="title_activity_settings">Einstellungen</string>
-	<string name="pref_title_ringtone">Alarmton</string>
-	<string name="pref_ringtone_silent">Leise</string>
-	<string name="show_elapsed_time">Zeige verstrichene Zeit</string>
-	<string name="show_notification_summary">Zeige eine Benachrichtigung über die verbleibende und bereits abgelaufene Zeit.</string>
 	<string name="show_notification">Zeige Benachrichtigungen</string>
-	<string name="pref_vibration_title">Vibration</string>
 	<string name="foreground_channel_name">Alarm</string>
 	<string name="running_channel_name">Timer</string>
-	<string name="bookmark_hint">Hinzufügen</string>
+	<string name="bookmark_hint">Lesezeichen Name</string>
 	<string name="open_notification_channel_title">Öffne die Systemeinstellungen für Benachrichtungen</string>
-	<string name="open_notification_channel_description">Ändere die Klingelton und Vibration für die Benachrichtigung</string>
 	<string name="action_repeat">Wiederholen</string>
 	<string name="action_stop">Stopp</string>
 	<string name="auto_repeat">Wiederholen nach 2 Sekunden</string>
 	<string name="please_allow_alarm_scheduling">Du hast Alarmplanung für den Random-Ticker deaktiviert. Bitte gehe zu den Einstellungen und gib die Erlaubnis frei.</string>
-	<string name="notification_ticker_ended">Zeit abgelaufen</string>
+	<string name="notification_ticker_ended">Die Zeit ist um!</string>
 	<string name="save_button">Speichern</string>
 
 </resources>
