--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="random_ticker_introduction">"Elige "</string>
-	<string name="show_notification">"Muestra notificación del temporizador "</string>
-	<string name="title_activity_settings">Ajustes</string>
-	<string name="running_channel_name">Temporizador</string>
-	<string name="foreground_channel_name">Alarma</string>
+	<string name="select_bookmark">Elige marcado</string>
 	<string name="bookmark_hint">Nombre marcador</string>
 	<string name="add_bookmark">Añadir marcador</string>
 	<string name="button_delete">Borrar</string>
