--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-	<string name="random_ticker_introduction">Define a time range in which an alarm will ring randomly.</string>
 	<string name="from">From</string>
 	<string name="to">To</string>
 	<string name="start_button">Start</string>
@@ -10,10 +9,7 @@
 	<string name="button_delete">Delete</string>
 	<string name="add_bookmark">Add bookmark</string>
 	<string name="bookmark_hint">Bookmark name</string>
-	<string name="foreground_channel_name">Alarm</string>
-	<string name="running_channel_name">Timer</string>
-	<string name="title_activity_settings">Settings</string>
-	<string name="show_notification">Enable timer notification</string>
+	<string name="select_bookmark">Select bookmark</string>
 	<string name="open_notification_channel_title">Open app notification settings</string>
 	<string name="action_repeat">Repeat</string>
 	<string name="action_stop">Stop</string>
